# ComputerLockPro

./: .gitignore  README.md  TEST_PLAN.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkey.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: app.rs  lock.rs  mod.rs  password.rs  power.rs  settings.rs  system_guard.rs
src-tauri/src/config/: app.rs  mod.rs  path.rs
src-tauri/src/db/: connection.rs  migration.rs  mod.rs
src-tauri/src/models/dto/: app.rs  event.rs  lock.rs  mod.rs  password.rs  power.rs  settings.rs  system_guard.rs
src-tauri/src/models/entity/: lock_event.rs  mod.rs  schema_migration.rs  setting.rs
src-tauri/src/models/vo/: event.rs  lock.rs  mod.rs
src-tauri/src/repositories/: events.rs  mod.rs  settings.rs
src-tauri/src/services/: app.rs  lock.rs  mod.rs  password.rs  power.rs  settings.rs  system_guard.rs
src-tauri/src/windows/: input_guard.rs  lock.rs  mod.rs
src/api/: index.ts  tauriClient.ts
src/components/: index.ts
src/layouts/: AppLayout.tsx
src/pages/: FocusPage.tsx  LockPage.tsx  LockScreenPage.tsx  LogsPage.tsx  PowerPage.tsx  SettingsPage.tsx  ShieldPage.tsx  index.ts
src/router/: index.ts  routes.ts  useHashRoute.ts
src/services/: appService.ts  index.ts  lockService.ts  passwordService.ts  powerService.ts  settingsService.ts  systemGuardService.ts
src/types/: app.ts  event.ts  index.ts  lock.ts  password.ts  power.ts  settings.ts  systemGuard.ts
src/utils/: index.ts  theme.ts  (+1 more)
(+11 files in other folders)
