[package]
name = "computer-lock-pro"
version = "0.1.0"
description = "Windows desktop lock, focus, and power assistant"
authors = ["ComputerLock Pro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "computer_lock_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
anyhow = "1"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
password-hash = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
windows-sys = { version = "0.61", features = ["Win32_System_Power"] }
